Script/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body,
.wrapper {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  font-family: sans-serif;
  background-color: hsl(189, 11%, 24%);
  background-image: url(../Images/100308.jpg);
  background-size: cover;
  background-blend-mode: luminosity;
}

.wrapper {
  padding-top: 30px;
  padding-left: 20px;
  padding-right: 20px;
}

header {
  text-align: center;
  N ;
  padding: 20px;
  padding-top: 0px;
  color: hsl(185, 23%, 79%);
}

.card {
  background-color: hsla(0, 0%, 100%, 0.85);
  border-radius: 5px;
  border-width: 1px;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
  color: hsl(206, 17%, 28%);
  font-size: 18px;
  margin: 0 auto;
  max-width: 800px;
  padding: 30px 40px;
}

.card {
  box-shadow: inset 0 -3em 3em rgba(209, 197, 197, 0.712), 0 0 0 2px rgb(255, 255, 255),
  0.3em 0.3em 1em rgba(27, 129, 133, 0.1);
}

.card-header::after {
  content: " ";
  display: block;
  width: 100%;
  background: #83c5ba;
  height: 2px;
}

.card-body {
  min-height: 100px;
  opacity: 0.60;

}

.card-footer {
  text-align: center;
}

.card-footer::before {
  content: " ";
  display: block;
  width: 100%;
  background: #83c5ba;
  height: 2px;
}

.card-footer::after {
  content: " ";
  display: block;
  clear: both;
}

.btn {
  border: 0;
  color: #fff;
  display: inline-block;
  font-size: 22px;
  line-height: 22px;
  margin: 20px 20px 10px 20px;
  padding: 14px 34px;
  text-shadow: 1px 1px 1px #000;
  border-radius: 25px;
  background-color: rgba(220, 0, 0, 1);
  background-image: linear-gradient(to top left,
                                    rgba(0, 0, 0, .2),
                                    rgba(0, 0, 0, .2) 30%,
                                    rgba(0, 0, 0, 0));
  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
              inset -2px -2px 3px rgba(0, 0, 0, .6);
  text-align: center;
  cursor: pointer;
}

.btn:hover {
  background-color: rgba(255, 0, 0, 1);
}

.btn:active {
  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
              inset 2px 2px 3px rgba(40, 101, 112, 0.6);
}
button[disabled] {
  cursor: default;
  background: #c0c7cf;
}

.float-right {
  float: right;
}

#password {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: block;
  width: 100%;
  padding-top: 55px;
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 45px;
  font-size: 1.3rem;
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
  border: 2px dashed #a6dadb;
  border-radius: 6px;
  resize: none;
  overflow: hidden;
}

@media (max-width: 690px) {
  .btn {
    font-size: 1rem;
    margin: 16px 0px 0px 0px;
    padding: 10px 15px;
  }

  #password {
    font-size: 1rem;
  }
}

@media (max-width: 500px) {
  .btn {
    font-size: 0.8rem;
  }
}

